refactor BlockExtensionState and MarkdownParser to enhance structure and improve component creation